# 3D-scanner-ROS

./: .gitignore  Lab1_From_linear_ODE_to_State_Space.ipynb  README.md
Registration/coke_can/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  38.pcd  39.pcd  4.pcd  40.pcd  41.pcd  42.pcd  43.pcd  44.pcd  (+60 more)
Registration/hammer/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  (+80 more)
Registration/src/: ScreenCamera_2019-05-08-21-08-56.json  ScreenCamera_2019-05-08-21-09-30.json  ScreenCamera_2019-05-08-21-50-58.json  ScreenCamera_2019-05-08-21-51-01.json  ScreenCamera_2019-05-08-21-51-08.json  ScreenCamera_2019-05-08-22-08-19.json  ScreenCamera_2019-05-08-22-19-36.json  first.py  regV01.py  (+17 more)
scanner_description/: CMakeLists.txt  package.xml
scanner_description/config/: scanner_control.yaml
scanner_description/launch/: scanner.rviz  scanner_control.launch  scanner_rviz.launch
scanner_description/scripts/: .main.py.swp  main.py  teleop.py
scanner_description/urdf/: scanner.xacro
scanner_description/worlds/: table.world
scanner_pcl/: CMakeLists.txt  merge.sh  package.xml  readme.md
(+28 files in other folders)
