<package>
  <name>scanner</name>
  <version>0.1.0</version>
  <description>scanner3D</description>
  <maintainer email="iguru98@yandex.ru">Boris G</maintainer>

  

  <author email="iguru98@yandex.ru">Boris G</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
